--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
     </div>
 
      <div class="ancestor">
-        <p>Parent</p>
+        <p>Parent ELement</p>
         <div class="absolute">
-            <p>Absolute</p>
+            <p>Absolute element</p>
         </div>
      </div>
 
